--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
-h1 {
-  color: #fff000;
+@font-face {
+  font-family: 'Raleway Semibold';
+  src: url("../assets/fonts/raleway/Raleway-SemiBold.eot");
+  src: url("../assets/fonts/raleway/Raleway-SemiBold.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/raleway/Raleway-SemiBold.woff") format("woff"), url("../assets/fonts/raleway/Raleway-SemiBold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
